2001-09-20  Max Horn  <max@quendi.de>
	* audio/midi_drivers/mac_midi.cc: made compile with OS X 10.1
	* files/listfiles.cc: unix implementation of U7ListFiles now properly
	uses globfree, making it work properly on OS X
	* Makefile.am: small change to bundle code
	* configure.in: changed to use AC_EXEEXT

2001-09-20  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/objs.cc: Set mask to find any obj. in find_closest(); fixes
	barge bug.
	* effects.cc:  Text effect follows object when it moves.

2001-09-19  Ryan Nunn <triforce@merlin.net.au>
	* actorio.cc : Finally save all flags for actors
	* exult.cc : Improved rendering timing and palette cycling timing
	* objs/animate.cc : Improved Frame_animator timing
	* gumps/gump_utils.h : Changed delay to 1/100 sec from 1/50 sec
	* gamewin.cc,  usecode/ucsched.cc, usecode/ucsched.h,
	  msvcstuff/msvc_kludges.h : Misc changes.

2001-09-19  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/contain.cc (Container_game_object): Fixed bug in
	remove_quantity() where all items weren't being removed.

	* gamewin.cc:  Save/restore Usecode scripts.
	* actorio.cc (Actor): Nastiness:  Taking over iflag1 to indicate
	saving of scheduled usecode.
	* gumps/Newfile_gump.cc (Newfile_gump): Pause/resume tqueue.
	* usecode/ucsched.cc: Save()/restore() work.
	* tqueue.h (public): find_delay() returns time when due.

2001-09-18  Ryan Nunn <triforce@merlin.net.au>
	* exult.cc : Always do full speed palette cycling in 8 bit modes

2001-09-18  Ryan Nunn <triforce@merlin.net.au>
	* audio/Midi.cc, audio/Midi.h : Fixed some potential bugs and added
	  some extra methods to retreive the current playing track and if the
	  current track is repeating.
	* cheat_screen.cc : Added some usecode related info the actor display
	* exult.cc, gamewin.cc : Made it so the current playing song number is
	  saved and the song is restarted on restore.

2001-09-18  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucinternal.cc: Run_usecode() handles case where obj==0.